# gaminus

./: .env.example  .gitignore  .release-it.json  CHANGELOG.md  CONTRIBUTING.md  README.de.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
artifacts/: clean-repository-migration-report.json  gajae-app-api-package-test-report.json  readme-consistency-audit-report.json
docker/: README.md
docs/: GJC-DESKTOP-ARCHITECTURE-ROADMAP.md  INSTALL.md  MVP.md  SELF-HOST.md  UPSTREAM.md  nginx-subpath-template.conf
electron/: desktopNotifications.js  desktopWindow.js  localServer.js  localServer.test.js  main.js  preload.cjs  remoteServers.js  remoteServers.test.js  serverInstaller.js  tabs.js  targetSessions.js  targetSessions.test.js  viewHost.js
native/gajae-core/: Cargo.toml
native/gajae-core/src/: jobs.rs  lib.rs  main.rs  pty.rs  watcher.rs
native/gaminus-core/: Cargo.toml
native/gaminus-core/src/: jobs.rs  lib.rs  main.rs  pty.rs  watcher.rs
public/: api-docs.html  clear-cache.html  manifest.json  sw.js
scripts/: build-rust-core.mjs  check-identity.mjs  deploy.sh  gajae-app-runtime.mjs  gajae-app.sh  gaminus-runtime.mjs  gaminus.sh  run-tests.mjs
server/: GJC-LIVE-SPEC.md  browser-use-mcp.ts  claude-sdk.js  cli.js  cursor-cli.js  gjc-cli-skill-probe.test.js  gjc-cli.js  gjc-cli.test.ts  gjc-core-host.test.ts  gjc-sdk-bridge.test.ts  gjc-sdk-bridge.ts  gjc-sdk-client.test.ts  gjc-windows-job.test.ts  index.js  (+10 more)
(+266 files in other folders)
