[package]
name = "gajae-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
base64 = "0.22.1"
portable-pty = "0.9.0"
notify = "6.1.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "gajae_core"
path = "src/lib.rs"

[[bin]]
name = "gajae-core"
path = "src/main.rs"
